
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_1__ ;


typedef int uint8 ;
typedef int uint16 ;
struct TYPE_6__ {int * p; } ;
typedef TYPE_1__* STREAM ;


 int in_uint16_le (TYPE_1__*,int) ;
 int in_uint8 (TYPE_1__*,int ) ;
 int in_uint8s (TYPE_1__*,int) ;

__attribute__((used)) static void
process_secondary_order(STREAM s)
{
 uint16 length;
 uint8 type;
 uint8 *next_order;

 in_uint16_le(s, length);
 in_uint8s(s, 2);
 in_uint8(s, type);
 next_order = s->p + length + 7;
 s->p = next_order;
}
